docs+config: correct bottleneck report and fix entry CPU default
Address review of the 3000-VU bottleneck report:
- separate the real host-nginx public-path capacity defect (worker_connections
  tuning, recorded in spike/runbook docs) from the four measurement confounds
- soften carrier claim to primary explanation under this JVM/cgroup config
  (N=1 per config, variance not characterized); keep the ceil(cpu.max) mechanism
- reframe client p95 as an E2E metric, not a server-p95 substitute
- state pinning only ruled out for explicit app synchronized, not via JFR
- reproduce block sets the CPU profile explicitly
- fix compose.resources.yml entry default 0.6 -> 1.5 (validated value), closing
  the repo half of the drift the VM .env already fixed

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01QDc7cTTqqA6NFbPWZXi3b2